--- a/1_repaso_conceptos/index.html
+++ b/1_repaso_conceptos/index.html
@@ -15,9 +15,9 @@
         </div>
 
         <div class="botones">
-            <button id="botonCambio">Blanco y negro</button>
-            <button>Desenfocar</button>
-            <button>Zoom y rotar</button>
+            <button id="boton1">Blanco y negro</button>
+            <button id="boton2">Desenfocar</button>
+            <button id="boton3">Zoom y rotar</button>
         </div>
 
     </section>
