Actualización poster interactivo

--- a/2_poster_interactivo/index.html
+++ b/2_poster_interactivo/index.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Poster interactivo</title>
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+    <section class="pantalla">
+        <img class="fondo" src="./assets/Fondo.png" alt="">
+        <img class="bloque1" src="./assets/Ladrillos1.png" alt="">
+        <img class="moneda1" src="./assets/Moneda1.png" alt="">
+        <img class="moneda2" src="./assets/Moneda2.png" alt="">
+        <img class="bloque2" src="./assets/Ladrillos2.png" alt="">
+        <img class="corazon" src="./assets/Corazón.png" alt="">
+        <img class="moneda3" src="./assets/Moneda3.png" alt="">
+    </section>
+
 
 
 
     <script src="./app.js"></script>
-    
 </body>
 </html>
