--- a/2_poster_interactivo/index.html
+++ b/2_poster_interactivo/index.html
@@ -7,14 +7,26 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
+
     <section class="pantalla">
+    <div class="hud">
+      <div class="hud-item">
+        <img src="./assets/MONEDA1.png" alt="Moneda">
+        <span id="contador-monedas">0</span>
+      </div>
+      <div class="hud-item">
+        <img src="./assets/Corazón.png" alt="Corazón">
+        <span id="contador-corazones">0</span>
+      </div>
+    </div>
+
         <img class="fondo" src="./assets/Fondo.png" alt="">
         <img class="bloque1" src="./assets/Ladrillos1.png" alt="">
-        <img class="moneda1" src="./assets/Moneda1.png" alt="">
-        <img class="moneda2" src="./assets/Moneda2.png" alt="">
+        <img class="coin moneda1 " src="./assets/Moneda1.png" alt="">
+        <img class="coin moneda2 " src="./assets/Moneda2.png" alt="">
         <img class="bloque2" src="./assets/Ladrillos2.png" alt="">
         <img class="corazon" src="./assets/Corazón.png" alt="">
-        <img class="moneda3" src="./assets/Moneda3.png" alt="">
+        <img class="coin moneda3" src="./assets/Moneda3.png" alt="">
     </section>
 
 
