Audio en la imagen

--- a/4_audio_video_js/index.html
+++ b/4_audio_video_js/index.html
@@ -10,7 +10,7 @@
 
     <div class="container">
         <div class="video-container">
-            <video id="video" width="400" controls>
+            <video id="video" width="400">
                 <source src="./assets/158229-816359520_small.mp4" type="video/mp4">
                 Tu navegador no soporta el formato de video.
             </video>
@@ -23,10 +23,19 @@
             <div class="image" id="image1">
                 <img class="img-min" src="./assets/tigre.jpg" alt="Imagen 1">
                 <button id="play-stop-img1">Play / Stop</button>
+                <audio id="audio-1">
+                    <source src="./assets/tiger.mp3" type="audio/ogg">
+                    Your browser does not support the audio tag.
+                </audio>
             </div>
+
             <div class="image" id="image2">
                 <img class="img-min" src="./assets/gato.jpg" alt="Imagen 1">
                 <button id="play-stop-img2">Play / Stop</button>
+                <audio id="audio-2">
+                    <source src="./assets/cat.mp3" type="audio/ogg">
+                    Your browser does not support the audio tag.
+                </audio>
             </div>
         </div>
     </div>
