--- a/5_galeria_viñetas/index.html
+++ b/5_galeria_viñetas/index.html
@@ -44,7 +44,14 @@
             <img class="fondo-1" src="./assets/fondo.png" alt="">
             <img class="arbusto-1" src="./assets/arbusto.png" alt="">
             <img class="flor-1" src="./assets/flores.png" alt="">
+
             <img id="misol" class="sol-1" src="./assets/sol.png" alt="">
+
+            <audio id="audio-sol">
+                    <source src="./assets/solecito.mp3" type="audio/ogg">
+                    Your browser does not support the audio tag.
+            </audio>
+
             <img class="mariposa-1" src="./assets/mariposa.png" alt="">
 
             
@@ -57,9 +64,14 @@
                     Your browser does not support the audio tag.
             </audio>
 
-            <img class="apple manzana-1" src="./assets/manzana.png" alt="">
-            <img class="apple manzana-2" src="./assets/manzana.png" alt="">
-            <img class="apple manzana-3" src="./assets/manzana.png" alt="">
+            <img id="play-manzana" class="apple manzana-1" src="./assets/manzana.png" alt="">
+            <img id="play-manzana" class="apple manzana-2" src="./assets/manzana.png" alt="">
+            <img id="play-manzana" class="apple manzana-3" src="./assets/manzana.png" alt="">
+
+            <audio id="audio-manzana">
+                    <source src="./assets/apple.mp3" type="audio/ogg">
+                    Your browser does not support the audio tag.
+            </audio>
 
         </div>
 
