Galeria-viñetas audios

--- a/5_galeria_viñetass/index.html
+++ b/5_galeria_viñetass/index.html
@@ -18,15 +18,30 @@
       <!-- Escena 1 -->
       <div class="escena activa">
         <div class="pantalla">
+
+          <div>
+        <audio id="audio-1">
+                    <source src="./assets/audio1.mp3" type="audio/ogg">
+                    Your browser does not support the audio tag.
+            </audio>    
+
+            <div class="buttons">
+                <button id="play1">Play</button>
+                <button id="stop1">Stop</button>
+            </div>
+        </div>
+
           <div class="hud">
             <div class="hud-item">
               <img src="./assets/MONEDA1.png" alt="Moneda">
               <span id="contador-monedas">0</span>
             </div>
             <div class="hud-item">
-              <img src="./assets/coarazon1.png" alt="Corazón">
+              <img src="./assets/corazon1.png" alt="Corazón">
               <span id="contador-corazones">0</span>
             </div>
+
+            
           </div>
           <img class="fondo" src="./assets/fondo2.png" alt="">
           <img class="bloque1" src="./assets/ladrillos2.png" alt="">
@@ -34,21 +49,44 @@
           <img class="coin moneda1" src="./assets/moneda1.png" alt="">
           <img class="coin moneda2" src="./assets/moneda 2.png" alt="">
           <img class="coin moneda3" src="./assets/moneda 3.png" alt="">
-          <img class="corazon" src="./assets/coarazon1.png" alt="">
+          <img class="corazon" src="./assets/corazon1.png" alt="">
         </div>
       </div>
+
 
       <!-- Escena 2  -->
       <div class="escena">
         <div class="pantalla">
+          <div>
+        <audio id="audio-2">
+                    <source src="./assets/audio1.mp3" type="audio/ogg">
+                    Your browser does not support the audio tag.
+            </audio>    
 
+            <div class="buttons">
+                <button id="play2">Play</button>
+                <button id="stop2">Stop</button>
+            </div>
+        </div>
+          <img class="fondo" src="./assets/fondo-3.jpg" alt="">
         </div>
       </div>
 
       <!-- Escena 3 -->
       <div class="escena">
         <div class="pantalla">
-          
+          <div>
+        <audio id="audio-3">
+                    <source src="./assets/audio1.mp3" type="audio/ogg">
+                    Your browser does not support the audio tag.
+            </audio>    
+
+            <div class="buttons">
+                <button id="play3">Play</button>
+                <button id="stop3">Stop</button>
+            </div>
+        </div>
+            <img class="fondo" src="./assets/fondo-4.jpg" alt="">
         </div>
       </div>
     </div>
@@ -60,8 +98,8 @@
   <!-- Miniaturas -->
   <div class="miniaturas">
     <img src="./assets/fondo2.png" data-index="0" alt="Miniatura 1">
-    <img src="./assets/fondo3.png" data-index="1" alt="Miniatura 2">
-    <img src="./assets/fondo4.png" data-index="2" alt="Miniatura 3">
+    <img src="./assets/fondo-3.jpg" data-index="1" alt="Miniatura 2">
+    <img src="./assets/fondo-4.jpg" data-index="2" alt="Miniatura 3">
   </div>
 
   <script src="./app.js"></script>
