--- a/6_base_datos_cómic/index.html
+++ b/6_base_datos_cómic/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +7,25 @@
     <link rel="stylesheet" href="./styless.css">
 </head>
 <body>
+
+    <section class="contenedorCaps">
+         <img class="flecha" src="./assets/flecha.png" alt="">
+        <div class="cap-1">
+            <div class="contenedorData">
+                <h2 class="titulo1">Capitulo 1</h2>
+                <h1 class="cap-t">EL DESPERTAR</h1>
+                <p class="des-cap1">Un encuentro casual entre dos estudiantes en la Universidad de Orien marca el inicio de algo más profundo. Emilia accede a un laboratorio secreto donde organismos desconocidos laten… sin corazón.</p>
+                <button class="BTN">
+                    <img class="play" src="./assets/play.png" alt="">
+                    Play
+                </button>
+           </div>
+        </div>
+
+        <div class="cap-2">
+            <h2>Capitulo 2</h2>
+        </div>
+    </section>
     
 
 
