--- a/6_base_datos_cómic/infoComic.html
+++ b/6_base_datos_cómic/infoComic.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -13,7 +13,7 @@
     </div>
         <nav class="menu">
             <ul>
-                <li><a href="#">All Comics</a></li>
+                <li><a href="#">Inicio</a></li>
                 <li><a href="#">About Us</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Subscribe</a></li>
