--- a/6_base_datos_cómic/index.html
+++ b/6_base_datos_cómic/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>I like Dick</title>
     <link rel="stylesheet" href="./styless.css">
 </head>
 <body>
 
     <section class="contenedorCaps">
-         <img class="flecha" src="./assets/flecha.png" alt="">
-        <div class="cap-1">
+        <a href="./infoComic.html">
+            <img class="flecha" src="./assets/flecha.png" alt="">
+        </a>
+        <div class="cap-1 capsH">
             <div class="contenedorData">
                 <h2 class="titulo1">Capitulo 1</h2>
                 <h1 class="cap-t">EL DESPERTAR</h1>
@@ -19,11 +21,26 @@
                     <img class="play" src="./assets/play.png" alt="">
                     Play
                 </button>
+                <div class="barra">
+                    <div></div>
+                </div>
            </div>
         </div>
 
-        <div class="cap-2">
+        <div class="cap-2 capsH opHcaps">
             <h2>Capitulo 2</h2>
+        </div>
+        <div class="cap-3 capsH opHcaps">
+            <h2>Capitulo 3</h2>
+        </div>
+        <div class="cap-4 capsH opHcaps">
+            <h2>Capitulo 4</h2>
+        </div>
+        <div class="cap-5 capsH opHcaps">
+            <h2>Capitulo 5</h2>
+        </div>
+        <div class="cap-6 capsH opHcaps">
+            <h2>Capitulo 6</h2>
         </div>
     </section>
     
