--- a/6_base_datos_cómic/index.html
+++ b/6_base_datos_cómic/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>I like Dick</title>
+    <title>Capitulo</title>
     <link rel="stylesheet" href="./styless.css">
 </head>
 <body>
@@ -12,6 +12,7 @@
         <a href="./infoComic.html">
             <img class="flecha" src="./assets/flecha.png" alt="">
         </a>
+
         <div class="cap-1 capsH">
             <div class="contenedorData">
                 <h2 class="titulo1">Capitulo 1</h2>
@@ -27,9 +28,11 @@
            </div>
         </div>
 
+    
         <div class="cap-2 capsH opHcaps">
             <h2>Capitulo 2</h2>
         </div>
+
         <div class="cap-3 capsH opHcaps">
             <h2>Capitulo 3</h2>
         </div>
