--- a/6_base_datos_cómic/infoComic.html
+++ b/6_base_datos_cómic/infoComic.html
@@ -70,7 +70,8 @@
 
 
 
-    <script src="bd.js"></script>
+    <script src="./bd.js"></script>
     <script src="./js.js"></script>
+    <script src="./app.js"></script>
 </body>
 </html>
