--- a/6_base_datos_cómic/indexx.html
+++ b/6_base_datos_cómic/indexx.html
@@ -7,21 +7,17 @@
     <link rel="stylesheet" href="./styless.css">
 </head>
 <body>
-    <section class="contenedorCaps">
+    <section class="contenedorCaps" id="contenedorCaps">
         <a href="./infoComic.html">
             <img class="flecha" src="./assets/flecha.png" alt="">
         </a>
-        <div class="cap-1 capsH" id="img-cap1">
-        </div>
-
-        <div class="contenedorData" id="info">
-        </div>
 
     </section>
     
 
 
-    <script src="./bad.js"></script>
+    <script src="./bd.js"></script>
     <script src="./app.js"></script>
+    <script src="./js.js"></script>
 </body>
 </html>
