--- a/6_base_datos_cómic/infoComic.html
+++ b/6_base_datos_cómic/infoComic.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./styles.css">
-    <title>Document</title>
+    <title>Principal</title>
 </head>
 <body>
     <header class="header">
@@ -14,7 +14,7 @@
         <nav class="menu">
             <ul>
                 <li><a href="#">Inicio</a></li>
-                <li><a href="#">About Us</a></li>
+                <li><a href="./indexx.html">Capitulos</a></li>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Subscribe</a></li>
             </ul>
